--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,10 +3,4 @@
 
 name = "timelessinsights"
 compatibility_date = "2024-01-01"
-
-[build]
-command = "npm run build"
-cwd = "."
-
-[build.upload]
-dir = "site/dist"
+pages_build_output_dir = "site/dist"
