Add AI-powered content enrichment with Gemini Flash
- Add summary, highlights, scope, anti_pattern, related_concepts to articles
- Display TL;DR box with key takeaways on Article page
- Show 'When to Use' and 'Common Mistake' sections
- Add Gemini SDK dependency and .env.example template
- Update search index with enriched content

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "scrape": "tsx scripts/scrape.ts",
     "scrape:one": "tsx scripts/scrape.ts --url",
     "tag": "tsx scripts/auto-tag.ts",
+    "enrich": "tsx scripts/enrich.ts",
     "build:index": "tsx scripts/build-search-index.ts",
     "dev": "vite",
     "build": "vite build",
@@ -15,6 +16,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "cheerio": "^1.0.0-rc.12",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
