Add collapsible AI enrichment section with 60-char preview

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ docs/
 Thumbs.db
 *.log
 
+# Temporary files
+temp_*.py
+temp_*.*
+
 # Lock files (use package-lock.json only)
 bun.lockb
 yarn.lock
