--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "tag": "tsx scripts/auto-tag.ts",
     "enrich": "tsx scripts/enrich.ts",
     "build:index": "tsx scripts/build-search-index.ts",
+    "build:graph": "tsx scripts/build-graph-index.ts",
     "dev": "vite",
     "build": "vite build",
-    "build:local": "npm run build:index && vite build",
+    "build:local": "npm run build:index && npm run build:graph && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.0",
+    "reactflow": "^11.11.4",
     "remark-gfm": "^4.0.0",
     "turndown": "^7.1.2",
     "yaml": "^2.3.4"
